# lvos-evaluation

./: README.md  pyproject.toml  setup.py
lvos_api/: evaluation_method.py
lvos_api/lvos/: evaluation.py  evaluation_mp.py  evaluation_mt.py  metrics.py
